[package]
name = "work"
version = "1.0.0"
authors = ["nielsing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
colored = "1.9"
dirs = "2.0"
lazy_static = "1.4.0"
regex = "1"
structopt = "0.3"
serde_json = "1.0"
